--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "8.2.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 8000",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 8080"
+    "preview": "vite preview --port 8000"
   },
   "dependencies": {
     "@formatjs/intl-pluralrules": "5.2.4",
