--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite --host --port 8000",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 8000"
+    "preview": "vite preview --port 8000",
+    "test": "jest"
   },
   "dependencies": {
     "@formatjs/intl-pluralrules": "5.2.4",
     "@formatjs/intl-relativetimeformat": "11.2.4",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "^2.11.6",
+    "@testing-library/react": "^14.1.2",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
     "axios": "1.4.0",
@@ -22,15 +24,18 @@
     "chart.js": "4.3.0",
     "clsx": "1.1.1",
     "formik": "2.2.9",
+    "jest": "^29.7.0",
     "line-awesome": "1.3.0",
     "nouislider": "15.5.1",
     "prism-react-renderer": "2.0.5",
     "prism-themes": "1.9.0",
     "prismjs": "1.28.0",
     "qs": "6.10.3",
+    "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-bootstrap": "2.5.0-beta.1",
     "react-copy-to-clipboard": "5.1.0",
+    "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-inlinesvg": "3.0.0",
     "react-intl": "^6.4.4",
@@ -40,39 +45,41 @@
     "react-table": "^7.7.0",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
-    "yup": "^1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "ts-jest": "^29.1.1",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/bootstrap": "5.1.10",
     "@types/chart.js": "2.9.37",
-    "@types/jest": "29.5.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "20.3.1",
     "@types/prismjs": "1.26.0",
     "@types/qs": "6.9.7",
+    "@types/react": "^18.2.15",
     "@types/react-copy-to-clipboard": "5.0.2",
+    "@types/react-dom": "^18.2.7",
     "@types/react-table": "^7.7.9",
     "@types/sass-loader": "8.0.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "css-loader": "6.7.1",
     "del": "7.0.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "2.6.1",
     "remove-files-webpack-plugin": "^1.5.0",
     "rtlcss-webpack-plugin": "4.0.7",
     "sass": "1.55.0",
     "sass-loader": "13.2.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
     "webpack": "5.74.0",
     "webpack-cli": "5.1.4",
-    "webpack-rtl-plugin": "^2.0.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "webpack-rtl-plugin": "^2.0.0"
   }
 }
