--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -48,7 +48,7 @@ jobs:
 
   deploy-dev:
       runs-on: ubuntu-latest
-      needs: Build
+      needs: build_pipeline
       environment: development
       steps:
         - name: Deploy to QA
