--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -19,32 +19,32 @@ jobs:
       - name: Fetch tags
         run: git fetch --prune --unshallow --tags
 
-      - name: Docker login
-        uses: docker/login-action@v1
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+      # - name: Docker login
+      #   uses: docker/login-action@v1
+      #   with:
+      #     registry: docker.io
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Set env
-        run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
+      # - name: Set env
+      #   run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
 
-      - name: Install dependencies
-        run: yarn install
+      # - name: Install dependencies
+      #   run: yarn install
 
-      - name: Run lint
-        run: yarn lint
+      # - name: Run lint
+      #   run: yarn lint
 
-      - name: Run tests
-        run: yarn test
+      # - name: Run tests
+      #   run: yarn test
 
-      - name: Build docker image
-        run: |
-          make -s build
+      # - name: Build docker image
+      #   run: |
+      #     make -s build
 
-      - name: Push docker image
-        run: |
-          make -s dockerpush
+      # - name: Push docker image
+      #   run: |
+      #     make -s dockerpush
 
   setup_ec2:
     runs-on: ubuntu-latest
@@ -59,6 +59,16 @@ jobs:
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install botocore boto3
+
       - name: Install Terraform and Ansible
         run: |
           sudo apt-get update
@@ -71,9 +81,12 @@ jobs:
 
       - name: Run Terraform and Ansible
         run: |
+          cd terraform
           terraform init
           terraform apply -auto-approve
+          cd ../ansible
           ansible-playbook -i aws_ec2.yml playbook.yml
+
 
 
   # deploy-dev:
