--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: all
+  vars:
+      ansible_python_interpreter: /usr/bin/python3
   become: yes
   tasks:
     - name: Update apt cache
