--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   vars:
-      ansible_python_interpreter: /usr/bin/python3
+    ansible_python_interpreter: /opt/pipx/venvs/ansible-core/bin/python
   become: yes
   tasks:
     - name: Update apt cache
