--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -81,8 +81,8 @@ jobs:
 
       - name: Run Terraform and Ansible
         run: |
-          terraform init
-          terraform apply -auto-approve
+          # terraform init
+          # terraform apply -auto-approve
           ansible-playbook -i aws_ec2.yml playbook.yml
 
 
