--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -11,7 +11,7 @@ env:
   TF_CLOUD_ORGANIZATION: "${{ secrets.TF_API_ORG_NAME }}"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "${{ secrets.TF_WORKSPACE }}"
-  CONFIG_DIRECTORY: "./"
+  CONFIG_DIRECTORY: "./terraform/"
 
 jobs:
   build_pipeline:
