--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -34,22 +34,22 @@ jobs:
       - name: Set env
         run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
 
-      - name: Install dependencies
-        run: yarn install
+      # - name: Install dependencies
+      #   run: yarn install
 
-      - name: Run lint
-        run: yarn lint
+      # - name: Run lint
+      #   run: yarn lint
 
-      - name: Run tests
-        run: yarn test
+      # - name: Run tests
+      #   run: yarn test
 
-      - name: Build docker image
-        run: |
-          make -s build
+      # - name: Build docker image
+      #   run: |
+      #     make -s build
 
-      - name: Push docker image
-        run: |
-          make -s dockerpush
+      # - name: Push docker image
+      #   run: |
+      #     make -s dockerpush
 
   terraform:
     name: Terraform
