test seperating terraform config for different envs

--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -7,11 +7,6 @@ on:
       - configuration-management
     tags:
       - 'v*'
-env:
-  TF_CLOUD_ORGANIZATION: "${{ secrets.TF_API_ORG_NAME }}"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "${{ secrets.TF_WORKSPACE }}"
-  CONFIG_DIRECTORY: "./terraform/"
 
 jobs:
   build_pipeline:
@@ -51,25 +46,71 @@ jobs:
       #   run: |
       #     make -s dockerpush
 
-  terraform:
-    name: Terraform
-    needs: build_pipeline
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
+  # terraform:
+  #   name: Terraform
+  #   needs: build_pipeline
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
 
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v1
+
+  #     - name: Terraform Init
+  #       run: terraform init
+
+  #     - name: Terraform Validate
+  #       run: terraform validate
+
+  #     - name: Upload Configuration
+  #       uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+  #       id: apply-upload
+  #       with:
+  #         workspace: ${{ env.TF_WORKSPACE }}
+  #         directory: ${{ env.CONFIG_DIRECTORY }}
+
+  #     - name: Create Apply Run
+  #       uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+  #       id: apply-run
+  #       with:
+  #         workspace: ${{ env.TF_WORKSPACE }}
+  #         configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
+
+
+      # - name: Apply
+      #   uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+      #   if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+      #   id: apply
+      #   with:
+      #     run: ${{ steps.apply-run.outputs.run_id }}
+      #     comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+
+  deploy-dev:
+    runs-on: ubuntu-latest
+    needs: build_pipeline
+    environment: dev
+    env:
+      TF_CLOUD_ORGANIZATION: "${{ secrets.TF_API_ORG_NAME }}"
+      TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+      TF_WORKSPACE: "devops"
+      CONFIG_DIRECTORY: "./terraform/dev"
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: eu-west-2
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+      - name: Fetch tags
+        run: git fetch --prune --unshallow --tags
 
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
+      - name: Set env
+        run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
 
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
@@ -85,26 +126,6 @@ jobs:
           workspace: ${{ env.TF_WORKSPACE }}
           configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
 
-
-      - name: Apply
-        uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
-        if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
-        id: apply
-        with:
-          run: ${{ steps.apply-run.outputs.run_id }}
-          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
-
-  deploy-dev:
-    runs-on: ubuntu-latest
-    needs: terraform
-    environment: dev
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set env
-        run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
-
       - name: Configure kubectl for Dev
         run: aws eks --region eu-west-2 update-kubeconfig --name dev-cluster
 
@@ -116,14 +137,40 @@ jobs:
 
   deploy-staging:
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: build_pipeline
     environment: staging
+    env:
+      TF_CLOUD_ORGANIZATION: "${{ secrets.TF_API_ORG_NAME }}"
+      TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+      TF_WORKSPACE: "devops-staging"
+      CONFIG_DIRECTORY: "./terraform/staging"
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: eu-west-2
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Fetch tags
+        run: git fetch --prune --unshallow --tags
+
       - name: Set env
         run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
+
+      - name: Upload Configuration
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+        id: apply-upload
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          directory: ${{ env.CONFIG_DIRECTORY }}
+
+      - name: Create Apply Run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+        id: apply-run
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
 
       - name: Configure kubectl for Staging
         run: aws eks --region eu-west-2 update-kubeconfig --name staging-cluster
@@ -135,14 +182,40 @@ jobs:
 
   deploy-prod:
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: build_pipeline
     environment: prod
+    env:
+      TF_CLOUD_ORGANIZATION: "${{ secrets.TF_API_ORG_NAME }}"
+      TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+      TF_WORKSPACE: "devops-prod"
+      CONFIG_DIRECTORY: "./terraform/prod"
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: eu-west-2
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Fetch tags
+        run: git fetch --prune --unshallow --tags
+
       - name: Set env
         run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
+
+      - name: Upload Configuration
+        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+        id: apply-upload
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          directory: ${{ env.CONFIG_DIRECTORY }}
+
+      - name: Create Apply Run
+        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+        id: apply-run
+        with:
+          workspace: ${{ env.TF_WORKSPACE }}
+          configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
 
       - name: Configure kubectl for Prod
         run: aws eks --region eu-west-2 update-kubeconfig --name prod-cluster
