--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -101,7 +101,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: eu-west-1
-      IMAGE_TAG: IMAGE_TAG=$(make -s name)
+      TF_VAR_IMAGE_TAG: IMAGE_TAG=$(make -s name)
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -110,7 +110,7 @@ jobs:
         run: git fetch --prune --unshallow --tags
 
       - name: Set env
-        run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
+        run: echo "TF_VAR_IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
 
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
@@ -133,11 +133,6 @@ jobs:
         with:
           run: ${{ steps.apply-run.outputs.run_id }}
           comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
-          IMAGE_TAG: $(make -s name)
-          env: |
-            IMAGE_TAG: IMAGE_TAG=$(make -s name)
-          vars: |
-            IMAGE_TAG=${{ env.IMAGE_TAG }}
 
       # - name: Configure kubectl for Dev
       #   run: aws eks --region eu-west-1 update-kubeconfig --name dev-eks-cluster
