--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -101,7 +101,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: eu-west-1
-      
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -110,7 +110,7 @@ jobs:
         run: git fetch --prune --unshallow --tags
 
       - name: Set env
-        run: echo "TF_VAR_IMAGE_TAG="\"$(make -s name)"\" >> $GITHUB_ENV
+        run: echo "TF_VAR_IMAGE_TAG="\"$(make -s name)\"" >> $GITHUB_ENV
 
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
