--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -109,8 +109,8 @@ jobs:
       - name: Fetch tags
         run: git fetch --prune --unshallow --tags
 
-      # - name: Set env
-      #   run: echo "TF_VAR_IMAGE_TAG=\"$(make -s name)\\\"" >> $GITHUB_ENV
+      - name: Set env
+        run: echo "TF_VAR_IMAGE_TAG=\"$(make -s name)\\\"" >> $GITHUB_ENV
 
       - name: Upload Configuration
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
