--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "8.2.1",
   "type": "module",
   "scripts": {
-    "dev": "vite --host --port 8000",
+    "dev": "vite --host 0.0.0.0 --port 8000",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 8000",
