--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -51,6 +51,8 @@ jobs:
       needs: build_pipeline
       environment: development
       steps:
+        - uses: actions/checkout@v4
+
         - name: Deploy to QA
           run: echo "Deploying to Dev environment"
 
