--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -49,7 +49,7 @@ jobs:
   deploy-dev:
       runs-on: ubuntu-latest
       needs: build_pipeline
-      environment: development
+      environment: dev
       steps:
         - uses: actions/checkout@v4
 
@@ -64,7 +64,7 @@ jobs:
 
         - uses: azure/webapps-deploy@v2
           with:
-            app-name: 'dev-deploy'
+            app-name: 'pos-dashboard-dev'
             publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_DEV }}
             images: 'thispama/pos-dashboard:${{ env.IMAGE_TAG }}'
 
