--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -74,8 +74,22 @@ jobs:
       needs: build_pipeline
       environment: staging
       steps:
-        - name: Deploy to QA
+        - uses: actions/checkout@v4
+
+        - name: Deploy to STAGING
           run: echo "Deploying to Staging environment"
+
+        - name: Fetch tags
+          run: git fetch --prune --unshallow --tags
+
+        - name: Set env
+          run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
+
+        - uses: azure/webapps-deploy@v2
+          with:
+            app-name: 'pos-dashboard-staging'
+            publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_STAGING }}
+            images: 'thispama/pos-dashboard:${{ env.IMAGE_TAG }}'
   
 
   deploy-prod:
@@ -83,67 +97,19 @@ jobs:
       needs: build_pipeline
       environment: prod
       steps:
-        - name: Deploy to Prod
+        - uses: actions/checkout@v4
+
+        - name: Deploy to PRODUCTION
           run: echo "Deploying to Prod environment"
 
+        - name: Fetch tags
+          run: git fetch --prune --unshallow --tags
 
+        - name: Set env
+          run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
 
-
-  # deploy_staging_pipeline:
-  #   name: Deploy Staging
-  #   needs: build_pipeline
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v4
-
-  #     - name: Fetch tags
-  #       run: git fetch --prune --unshallow --tags
-
-  #     - name: Set env
-  #       run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
-
-  #     - uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'acclabs-staging'
-  #         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_STAGING }}
-  #         images: 'acclabdocker.azurecr.io/platform:${{ env.IMAGE_TAG }}'
-
-  # deploy_tag_pipeline:
-  #   name: Deploy Tag
-  #   needs: build_pipeline
-  #   if: startsWith(github.ref, 'refs/tags/v')
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v4
-
-  #     - name: Fetch tags
-  #       run: git fetch --prune --unshallow --tags
-
-  #     - name: Set env
-  #       run: echo "IMAGE_TAG=$(make -s name)" >> $GITHUB_ENV
-
-  #     - uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'acclabs-solutionsmapping'
-  #         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_SM }}
-  #         images: 'acclabdocker.azurecr.io/platform:${{ env.IMAGE_TAG }}'
-
-  #     - uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'acclabs-actionlearningplans'
-  #         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_AP }}
-  #         images: 'acclabdocker.azurecr.io/platform:${{ env.IMAGE_TAG }}'
-
-  #     - uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'acclabs-experiments'
-  #         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_EXP }}
-  #         images: 'acclabdocker.azurecr.io/platform:${{ env.IMAGE_TAG }}'
-
-  #     - uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'acclabs-consent'
-  #         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_CONSENT }}
-  #         images: 'acclabdocker.azurecr.io/platform:${{ env.IMAGE_TAG }}'
+        - uses: azure/webapps-deploy@v2
+          with:
+            app-name: 'pos-dashboard-production'
+            publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE_PROD }}
+            images: 'thispama/pos-dashboard:${{ env.IMAGE_TAG }}'
